style()- finally worked out solution of that nasty VH bug on ios

--- a/src/sass/components/_app.scss
+++ b/src/sass/components/_app.scss
@@ -2,7 +2,8 @@
   display: grid;
   grid-template-columns: 5rem auto;
   grid-template-rows: 10rem auto;
-  min-height: 100vh;
+  height: 100vh;
+  max-height: -webkit-fill-available;
 
   @include respond-small {
     grid-template-columns: auto;
